event conficlt sloved